--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 8.2
+
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
 
@@ -35,8 +40,8 @@ jobs:
     - name: Run test suite
       run: composer run-script tests
 
-    - name: Check coding standards
-      run: composer run-script check-cs
-
     - name: Perform static analysis
       run: composer run-script phpstan
+
+    - name: Check coding standards
+      run: composer run-script check-cs
